--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "country-ai-backend",
   "version": "1.0.0",
   "description": "Backend AI for country-ai project",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npm run test",
-    "start": "node server.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
